<resources>
    <string name="app_name">Quickexamprep</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_exam">Popular Exam</string>
    <string name="all_exams">All Exams</string>
    <string name="home">Home</string>
    <string name="my_tests">My Tests</string>
    <string name="my_packages">My Packages</string>
    <string name="take_test">Take Test</string>
    <string name="buy_now">Buy Now</string>
    <string name="answered">Answered</string>
    <string name="not_answered">Not Answered</string>
    <string name="marked">Marked</string>
    <string name="not_visited">Not Visited</string>
    <string name="view_result">View Result</string>
    <string name="submit">Submit</string>
    <string name="pause">Pause</string>
    <string name="marked_for_view">Mark for review</string>
    <string name="clear_selection">Clear selection</string>
    <string name="result">Results</string>
    <string name="score_card">Score Card</string>
    <string name="leader_board">Leader Board</string>
    <string name="start">Start</string>
    <string name="overall_result">Overall Result</string>
    <string name="nation_rank">Nation Rank</string>
    <string name="overall_score">Overall Score</string>
    <string name="best_score">Best Score</string>
    <string name="state_rank">State Rank</string>
    <string name="percentile">Percentile</string>
    <string name="average_score">Average Score</string>
    <string name="time_distribution">Time Distribution</string>
    <string name="time_taken">Time Taken</string>
    <string name="view_solution">View Solution</string>
    <string name="score">Score</string>
    <string name="correct_ans">Correct Ans</string>
    <string name="wrong_ans">Wrong Ans</string>
    <string name="postive_marks">Postive Marks</string>
    <string name="nagtive_marks">Nagtive Marks</string>
    <string name="unattempted_e">Unattempted[E]</string>
    <string name="solution">Solution</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="introduction">Introduction</string>
    <string name="questions">Questions</string>
    <string name="minutes">Minutes</string>
    <string name="mark">Mark</string>
    <string name="instructions">Instructions</string>
    <string name="start_test">Start Test</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="by_clicking_i_agree_to_terms_and_service">By clicking, I agree to Terms and Service</string>
</resources>