<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="0dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:id="@+id/rl_answer_completion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/ll_answered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle"
                    android:backgroundTint="#029308"
                    android:gravity="center"
                    android:text="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/answered"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_not_answered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_toEndOf="@id/ll_answered"
                android:layout_toRightOf="@id/ll_answered"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/not_answered"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_marked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_answered"
                android:layout_alignEnd="@id/ll_answered"
                android:layout_alignRight="@id/ll_answered"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_bookmark_24"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/marked"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_not_visited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_answered"
                android:layout_alignStart="@id/ll_not_answered"
                android:layout_alignLeft="@id/ll_not_answered"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:orientation="vertical">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/cicrlewithoutline"
                    android:gravity="center"
                    android:text="29"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/not_visited"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_view_result"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary_color"
            android:layout_below="@+id/rl_answer_completion"
            android:layout_marginTop="@dimen/dp_40"
            app:cornerRadius="0dp"
            android:gravity="center"
            android:text="@string/view_result"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>