<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionScreen">


    <RelativeLayout
        android:id="@+id/rl_test_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar_testscreen"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_exam_name"
            android:layout_alignParentRight="true"
            android:padding="@dimen/dp_10"
            android:src="@drawable/ic_report"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/txt_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_exam_name"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="Q."
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_question_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_exam_name"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toEndOf="@+id/txt_question"
            android:layout_toRightOf="@+id/txt_question"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_exam_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:text="Apptitude"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_bottom_"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/previous"
            android:textColor="@color/primary_color"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/primary_color"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/next"
            android:textColor="@color/white"
            app:backgroundTint="@color/primary_color"
            app:strokeColor="@color/primary_color"
            app:strokeWidth="1dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_bottom_"
        android:layout_below="@+id/rl_test_screen"
        android:layout_marginBottom="@dimen/dp_10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_question_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_15"
                android:text="માધવ મંત્રીએ દિલ્હીના કયા સુલતાનને ગુજરાત પર આક્રમણ કરવા આગ્રહ કર્યો?"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_solution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_questions_option"
                android:layout_margin="@dimen/dp_20"
                android:text="Solution:"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_solution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_solution"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:text="P=gh (dm/dt)=10*100*100=100kwp"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/rv_questions_option"
                android:background="#e3e3e3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_questions_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_question_name"
                android:layout_margin="@dimen/dp_15" />
        </RelativeLayout>
    </ScrollView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/rl_bottom_"
        android:background="#e3e3e3" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_testscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/solution"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>
</RelativeLayout>